experience part added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="background_Image">
+    <section class="background_Image experience_flexible">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span>Peter Parker</span> World</h1>
@@ -33,7 +33,7 @@
         <img src="/images/chobieRight.png" alt="Image of saklain" />
       </div>
     </section>
-    <section class="middle_image">
+    <section class="middle_image experience_flexible">
       <div class="half-width">
         <img src="/images/chobieLeft.png" alt="picture of saklain" />
       </div>
@@ -45,7 +45,33 @@
           website. I can even teach my grandma how to make simple website. My
           goal is to build 3 websites and learn advanced topics.
         </p>
-        <a target="_blank" class ="button" href="">DOWNLOAD RESUME</a>
+        <a target="_blank" class="button" href="">DOWNLOAD RESUME</a>
+      </div>
+    </section>
+    <section>
+      <h2>Experiences</h2>
+      <div class="experience_flexible">
+        <div class="experience">
+          <h2>Full Stack Web Developer</h2>
+          <h3>2021-Present | Pro Level Developer</h3>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+        <div class="experience">
+          <h2>Baby Web Developer</h2>
+          <h3>2020-2021 | Programming Hero Learner</h3>
+          <p>
+            They didn't offer me a job. But I made myself as a remove web
+            developer. I made their website and showed it to them. They liked
+            it. And uploaded the content. It was fun working at Programming
+            Hero.
+          </p>
+        </div>
       </div>
     </section>
   </body>
