different border and footer added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
       <h2>Experiences</h2>
       <div class="experience_flexible">
-        <div class="experience">
+        <div class="experience" id="full_stack">
           <h2>Full Stack Web Developer</h2>
           <h3>2021-Present | Pro Level Developer</h3>
           <p>
@@ -62,7 +62,7 @@
             100% web solution.
           </p>
         </div>
-        <div class="experience">
+        <div id="baby_dev" class="experience">
           <h2>Baby Web Developer</h2>
           <h3>2020-2021 | Programming Hero Learner</h3>
           <p>
@@ -73,6 +73,9 @@
           </p>
         </div>
       </div>
+      <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+      </footer>
     </section>
   </body>
 </html>
