images ploblem solved

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         >
       </div>
       <div class="half-width">
-        <img src="/images/chobieRight.png" />
+        <img src="images/chobieRight.png" />
       </div>
     </section>
     <section class="middle_image experience_flexible">
       <div class="half-width">
-        <img src="/images/chobieLeft.png" />
+        <img src="images/chobieLeft.png" />
       </div>
       <div class="half-width">
         <h2>Dream Big</h2>
